--- a/app/main/main.scss
+++ b/app/main/main.scss
@@ -23,9 +23,8 @@
 }
 
 body, html {
-  // overflow: hidden;
   font-size: 14px;
 }
 body {
-  height: 5000px;
+  
 }
